data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3652.wast
;; 1. **Test Description**: Attempt to call a function using `call` with an incorrect number of arguments on the stack.    - **Constraint Checked**: Ensures the function call fails when the number of arguments consumed by `call` does not match the function's required parameters.    - **Improper Handling**: Tests if the function can handle excess or insufficient arguments, potentially leaving or consuming unintended stack values.

(assert_invalid
  (module
    (type (func (param i32 i32)))
    (func $incorrect-args
      (call 0 (i32.const 1))
    )
  )
  "type mismatch"
)